# ArchUnitPython

./: .gitattributes  .gitignore  .releaserc.json  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/: PAGES.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/workflows/: docs.yaml  integrate.yaml  stale.yaml
docs/: architecture-testing-comparison.md  product-direction-notes.md
examples/ai_rag_demo/: architecture.puml
examples/ai_rag_demo/api/: bad_shortcut.py  endpoints.py
examples/ai_rag_demo/llm/: client.py
examples/ai_rag_demo/models/: document.py  query.py
examples/ai_rag_demo/retrieval/: embedder.py  vector_store.py
examples/ai_rag_demo/services/: rag_service.py
examples/ai_rag_demo/shared/: config.py  leaky.py
examples/ai_rag_demo/tests/: test_architecture.py
research/product-direction/: architecture-testing-landscape.md
scripts/: bump_release_version.py  check_release_metadata.py
src/archunitpy/: __init__.py
src/archunitpy/common/: __init__.py  pattern_matching.py  regex_factory.py
src/archunitpy/common/assertion/: __init__.py  violation.py
src/archunitpy/common/error/: __init__.py  errors.py
src/archunitpy/common/extraction/: __init__.py  extract_graph.py  graph.py
src/archunitpy/common/fluentapi/: __init__.py  checkable.py
src/archunitpy/common/logging/: __init__.py
src/archunitpy/common/projection/: __init__.py  edge_projections.py  project_cycles.py  project_edges.py  project_nodes.py  types.py
src/archunitpy/common/util/: __init__.py  declaration_detector.py  logger.py
src/archunitpy/files/: __init__.py
src/archunitpy/files/assertion/: __init__.py  custom_file_logic.py  cycle_free.py  depend_on_files.py  matching_files.py
src/archunitpy/files/fluentapi/: files.py
src/archunitpy/metrics/assertion/: metric_thresholds.py
src/archunitpy/metrics/calculation/: count.py  distance.py  lcom.py
src/archunitpy/metrics/common/: __init__.py
src/archunitpy/metrics/extraction/: extract_class_info.py
src/archunitpy/metrics/fluentapi/: __init__.py  export_utils.py  metrics.py
src/archunitpy/slices/: __init__.py
src/archunitpy/slices/assertion/: __init__.py  admissible_edges.py
src/archunitpy/slices/fluentapi/: slices.py
src/archunitpy/slices/projection/: __init__.py  slicing_projections.py
src/archunitpy/slices/uml/: __init__.py  export_diagram.py  generate_rules.py
src/archunitpy/testing/: __init__.py  assertion.py
src/archunitpy/testing/common/: __init__.py  violation_factory.py
src/archunitpython/: __init__.py
src/archunitpython/common/: __init__.py  pattern_matching.py  regex_factory.py  types.py
src/archunitpython/common/assertion/: __init__.py  violation.py
src/archunitpython/common/error/: __init__.py  errors.py
src/archunitpython/common/extraction/: __init__.py  extract_graph.py
src/archunitpython/common/fluentapi/: __init__.py  checkable.py
src/archunitpython/common/logging/: __init__.py  types.py
src/archunitpython/graph/: __init__.py  graph_reporter.py
src/archunitpython/layers/: __init__.py
src/archunitpython/metrics/: __init__.py
src/archunitpython/testing/: __init__.py  assertion.py
tests/: test_setup.py
tests/common/: test_core_types.py  test_cycles.py  test_declaration_detector.py  test_extract_graph.py  test_logger.py  test_pattern_matching.py  test_projection.py
tests/files/: test_file_assertions.py  test_files_fluentapi.py
tests/fixtures/metrics_project/: service.py
tests/fixtures/sample_project/: architecture.puml
tests/graph/: test_graph_reporter.py
tests/integration/: test_e2e.py
tests/layers/: test_layers.py
tests/metrics/: test_export.py  test_metrics.py  test_metrics_fluentapi.py
tests/slices/: test_slices.py
(+58 files in other folders)
