[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archunitpython"
version = "1.0.0"
description = "Architecture testing library for Python projects. Enforce dependency rules, detect cycles, validate metrics."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lukas Niessen", email = "lks.niessen@gmail.com" },
]
keywords = [
    "architecture",
    "testing",
    "python",
    "code-quality",
    "dependency-analysis",
    "circular-dependencies",
    "clean-code",
    "architectural-testing",
    "static-analysis",
    "code-standards",
    "pytest",
    "software-architecture",
    "technical-debt",
    "code-metrics",
    "linting",
    "developer-tools",
    "archunit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/LukasNiessen/ArchUnitPython"
Repository = "https://github.com/LukasNiessen/ArchUnitPython.git"
Documentation = "https://lukasniessen.github.io/ArchUnitPython/"
Issues = "https://github.com/LukasNiessen/ArchUnitPython/issues"
Changelog = "https://github.com/LukasNiessen/ArchUnitPython/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.hatch.build.targets.wheel]
packages = ["src/archunitpython"]

[tool.coverage.run]
source = ["archunitpython"]

[tool.coverage.report]
fail_under = 65
